<resources>
    <string name="app_name">MisBrincosApp</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in">LogIn</string>
    <string name="email">Email</string>
    <string name="ilustration_log_in">IlustrationLogIn</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textview">TextView</string>
    <string name="welcome_to">Welcome to</string>
    <string name="mis_brincos">Mis Brincos</string>
    <string name="svg_main_page">SVG main page ilustration</string>
    <string name="login_sucess_msg">Succes login</string>
    <string name="login_fail_msg">Failed LogIn</string>
    <string name="lack_msg">Please complete the parameters</string>
    <string name="user_btn">User Button</string>
    <string name="your_functions_are">Your functions are</string>
    <string name="icon_card_base">Icon Card Base</string>
    <string name="classes_function">Lessons</string>
    <string name="sessions_functions">Sessions</string>
    <string name="students_function">Students</string>
    <string name="packages_function">Packages</string>
    <string name="booking_function">Bookings</string>
    <string name="create_booking">Create Booking</string>
    <string name="show_bookings">Show Bookings</string>
    <string name="delete_booking">Delete Booking</string>
    <string name="create_class">Create Lesson</string>
    <string name="show_classes">Show Lessons</string>
    <string name="delete_class">Delete Lesson</string>
    <string name="create_package">Create Package</string>
    <string name="show_packages">Show Packages</string>
    <string name="delete_package">Delete Package</string>
    <string name="create_student">Create Student</string>
    <string name="show_students">Show Students</string>
    <string name="edit_student">Edit Student</string>
    <string name="edit_package">Edit Package</string>
    <string name="create_session">Create Session</string>
    <string name="delete_session">Delete Session</string>
    <string name="show_sessions">Show Sessions</string>
    <string name="edit_session">Edit Session</string>
    <string name="add_package">Add Package to Student</string>
    <string name="name">Name</string>
    <string name="logout">LogOut</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="create_new_package">Create new package</string>
    <string name="package_name">Package Name</string>
    <string name="total_lessons">Total of Lessons</string>
    <string name="price">Price</string>
    <string name="total_days">Total of Days</string>
    <string name="insert_package_name">Insert Package Plan Name</string>
    <string name="insert_price_package">Insert the Price of the Package</string>
    <string name="select_package_id">Select Package ID</string>
    <string name="select_session_id">Select Session ID</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="classroom_number">Classroom Number</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="duration">Duration</string>
    <string name="pakcage_plan">Package Plan</string>
    <string name="total_of_lessons">Total of Lessons</string>
    <string name="pakcage_title_id">Package Id</string>
    <string name="student_name">Student Name</string>
    <string name="Cc">Cc</string>
    <string name="session_lessons_name">Session Name</string>
    <string name="your_name">Your name</string>
    <string name="student_s_name">Student\'s Name</string>
    <string name="your_account">Your Account</string>
    <string name="your_cc">Your Cc</string>
    <string name="student_s_cc">Student\'s Cc</string>
    <string name="your_phone">Your Phone</string>
    <string name="student_s_phone">Student\'s Phone</string>
    <string name="phone">Phone</string>
    <string name="your_email">Your Email</string>
    <string name="student_s_email">Student\'s Email</string>
    <string name="id_package">Id\'s Package</string>
    <string name="Cc_student">Cc\'s Student</string>
    <string name="name_s_lessons">Lesson\'s Names</string>
    <string name="your_lessons_name">Yours Lessons Names</string>
    <string name="your_package_id">Your Package Id</string>
    <string name="add_package_to_student">Add Package</string>
    <string name="book">Book</string>
    <string name="booking_name">Booking Name</string>
    <string name="days_of_duration_of_the_lesson">Days of duration</string>
    <string name="limit_of_cancelation_days">Limit of days for cancelation</string>
    <string name="dayOf_week">Day Of Week</string>
    <string name="time_button">Time Button</string>
    <string name="sessions_id">Sessions Id</string>
    <string name="id_session">Sessions Id</string>
    <string name="booking">Booking</string>
    <string name="booking_id">Booking Id</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_day">Booking Day</string>
    <string name="booking_hour">Booking Hour</string>
    <string name="session">Session</string>
    <string name="student">Student</string>
    <string name="creating_lesson">Creating Lesson</string>
    <string name="bad_inputs">Wrong inputs, please check</string>
    <string name="succes_bd_conection">SuccessFul Conection With Bd</string>
    <string name="nosucces_bd_conection">No SuccessFul Conection With Bd</string>
    <string name="error_in_consult">Error in Sql Consult</string>
    <string name="cc_teacher">Cc Teacher</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="lesson">Lesson</string>
    <string name="show_teachers">Show Teachers</string>
    <string name="lessons">Lessons</string>
    <string name="total_time_of_package">Total Time of Package</string>
    <string name="teacher_funtions">Teachers</string>
    <string name="teacher_functions">Teachers</string>
    <string name="package_">Package</string>
    <string name="create_teacher">Create Teacher</string>
    <string name="edit_teacher">Edit Teacher</string>
    <string name="delete_teacher">Delete Teacher</string>
    <string name="creating_student">Creating Student</string>
    <string name="total_sold">Total Sold</string>
    <string name="shoppings">Shoppings</string>
    <string name="final_date">Final Date</string>
    <string name="dayOf_week_and_hour">Day Of Week And Hour</string>
    <string name="assistance">Assistance</string>
    <string name="teacher">Teacher</string>
    <string name="sign_up_failed">Create Students Credential Failed</string>
    <string name="sign_up_succes">Create Students Credentias Succesful</string>
    <string name="especial">Specializes</string>
</resources>